# unpaywallbot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
bot/: __init__.py  config.py  constants.py  main.py
bot/auth/: __init__.py  account_manager.py  encryptor.py
bot/handlers/: __init__.py  callbacks.py  start.py  url_handler.py
bot/middleware/: __init__.py  access_log.py  rate_limiter.py  whitelist.py
bot/models/: __init__.py  article.py  paywall_info.py  telegraph_publisher.py  user_request.py
bot/services/: __init__.py  content_extractor.py  orchestrator.py  paywall_classifier.py  protocols.py
bot/services/methods/: __init__.py  archive_relay.py  googlebot_spoof.py  headless_auth.py  js_disable.py  wsj.py
bot/storage/: __init__.py  cache.py  redis_client.py
bot/utils/: __init__.py  logger.py  text_formatter.py  url_utils.py
data/: paywall_map.yaml  user_agents.yaml
docs/: architecture.mermaid  detection_methods.md  threat_model.md
notebooks/: analysis.ipynb
scripts/: __init__.py  generate_report.py  register_accounts.py  test_paywall.py
tests/: __init__.py  conftest.py  test_auth.py  test_cache.py  test_classifier.py  test_extractor.py  test_handlers.py  test_main.py  test_methods_googlebot.py  test_methods_headless.py  test_methods_js_disable.py  test_middleware.py  test_models.py  test_orchestrator.py  test_platforms_german.py  test_telegraph.py  test_text_formatter.py  test_url_utils.py
