[project]
name = "unpaywallbot"
version = "0.1.0"
description = "Telegram-бот для анализа paywall-систем (дипломный проект ИБ)"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.0",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "readability-lxml>=0.8",
    "redis>=5.0",
    "cryptography>=42.0",
    "playwright>=1.58.0",
]

[project.optional-dependencies]
headless = [
    "playwright>=1.40",
]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pre-commit>=3.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
ignore = ["S101"]

[tool.ruff.lint.isort]
force-single-line = false

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=bot",
    "--cov-report=term-missing",
    "--cov-fail-under=60",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
